--- a/index.html
+++ b/index.html
@@ -37,32 +37,12 @@
 <main>
 <p><h2>Вeб-технологии</h2></p >
 
-<table>
-<caption>Опыт работы</caption>
-    <tr>
-        <td>год</td>
-        <td>место работы (учебы), должность</td>
-        <td>должностные обязанности</td>
-    </tr>
+<p>Скачков А.А.</p>
+<p>БИС-19</p>
+<p><img class="photo" src="img/photo.png"></p>
+<p><a href="https://lms.uni-dubna.ru/"> </a></p>
+<div> lorem...</div>
 
-        <tr>
-        <td>2020-2024</td>
-        <td colspan="2">Университет "Дубна", Бизнес информатика" </td>
-    </tr>
-
-    <tr>
-        <td>2024-2028</td>
-        <td>"Рога и копыта", WEB дизайнер</td>
-        <td>Работать 24/7/365</td>
-    </tr>
-
-    <tr>
-        <td>2028-2048</td>
-        <td>"Рога и копыта", заместитель директора по информационным технологиям</td>
-        <td>Получать зарплату</td>
-    </tr>
-
-</table>
 </main>
 
 <footer>
