--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" >
 <head>
     <meta charset="utf-8" />
     <title>Document</title>
@@ -8,15 +8,16 @@
 </head>
 
 <body>
-<header>
-<div class="padding">
-<ul>
-    <li class="no_marker">
+<header >
+    <div class="row">
         <a href="index.html">
-        <img class="logo" src="img/logo.png" alt="logo"> 
+         <img class="logo" src="img/logo.png" alt="logo"> 
         </a>
-    </li>
+        <h2 class="center">Вeб-технологии</h2>
+    </div>
 
+<nav class="padding">
+<ul class="row">
     <li>
         <a href="index.html">О себе</a>
     </li>
@@ -29,33 +30,39 @@
         <a href="attestat.html">Запись на аттестацию</a>
     </li>
 </ul>
-</div>
+</nav>
 
 </header>
-</body>
 
-<main>
-<p><h2>Вeб-технологии</h2></p >
 
-<p>Скачков А.А.</p>
-<p>БИС-19</p>
-<p><img class="photo" src="img/photo.png"></p>
-<p><a href="https://lms.uni-dubna.ru/"> </a></p>
-<div> lorem...</div>
-
+<main class="row_70 lightblue">
+<div>
+    <p><img class="photo" src="img/photo.png"></p>
+    <p class="center_p bold">Скачков А.А.</p>
+    <p class="center_p">БИС-19</p>
+    <p class="center_p"><a href="https://lms.uni-dubna.ru/">Университет "Дубна" </a></p>
+</div>
+<div class="padding">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+anim id est laborum.
+</div>
 </main>
 
-<footer>
+<footer class="row">
+<div>
+    Сайт разработан Скачковым А., Copyright © 2023
+</div>
+
 <div>
     <a href="http://www.facebook.com"><img class="icon" src='img/facebook.png' /></a>
     <a href="http://www.twitter.com"><img class="icon" src='img/twitter.png' /></a>
     <a href="http://www.youtube.com"><img class="icon" src='img/youtube.png' /></a>
 </div>
 
-<div>
-    Сайт разработан Скачковым А., Copyright © 2023
-</div>
-
 </footer>
-
+</body>
 </html>
