--- a/resume.html
+++ b/resume.html
@@ -9,14 +9,15 @@
 
 <body>
 <header>
-<div class="padding">
-<ul>
-    <li class="no_marker">
+    <div class="row">
         <a href="index.html">
-        <img class="logo" src="img/logo.png" alt="logo"> 
+         <img class="logo" src="img/logo.png" alt="logo"> 
         </a>
-    </li>
+        <h2 class="center">Вeб-технологии</h2>
+    </div>
 
+<nav class="padding">
+<ul class="row">
     <li>
         <a href="index.html">О себе</a>
     </li>
@@ -29,35 +30,35 @@
         <a href="attestat.html">Запись на аттестацию</a>
     </li>
 </ul>
-</div>
+</nav>
 
 </header>
-</body>
+
+
 
 <main>
-<p><h2>Вeб-технологии</h2></p >
 
 <table>
 <caption>Опыт работы</caption>
     <tr>
-        <td>год</td>
+        <td class="td1">год</td>
         <td>место работы (учебы), должность</td>
         <td>должностные обязанности</td>
     </tr>
 
-        <tr>
-        <td>2020-2024</td>
+    <tr>
+        <td class="td1">2020-2024</td>
         <td colspan="2">Университет "Дубна", Бизнес информатика" </td>
     </tr>
 
     <tr>
-        <td>2024-2028</td>
+        <td class="td1">2024-2028</td>
         <td>"Рога и копыта", WEB дизайнер</td>
         <td>Работать 24/7/365</td>
     </tr>
 
     <tr>
-        <td>2028-2048</td>
+        <td class="td1">2028-2048</td>
         <td>"Рога и копыта", заместитель директора по информационным технологиям</td>
         <td>Получать зарплату</td>
     </tr>
@@ -65,17 +66,17 @@
 </table>
 </main>
 
-<footer>
+<footer class="row">
+<div>
+    Сайт разработан Скачковым А., Copyright © 2023
+</div>
+
 <div>
     <a href="http://www.facebook.com"><img class="icon" src='img/facebook.png' /></a>
     <a href="http://www.twitter.com"><img class="icon" src='img/twitter.png' /></a>
     <a href="http://www.youtube.com"><img class="icon" src='img/youtube.png' /></a>
 </div>
 
-<div>
-    Сайт разработан Скачковым А., Copyright © 2023
-</div>
-
 </footer>
-
+</body>
 </html>
