--- a/attestat.html
+++ b/attestat.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div class="content">
 <header>
     <div class="row">
         <a href="index.html">
@@ -117,7 +118,7 @@
     </div>
     </form>
 </main>
-
+</div>
 <footer class="row">
 <div>
     Сайт разработан Скачковым А., Copyright © 2023
