--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div class="content">
 <header >
     <div class="row">
         <a href="index.html">
@@ -51,6 +52,7 @@ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deseru
 anim id est laborum.
 </div>
 </main>
+</div>
 
 <footer class="row">
 <div>
