--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div class="content">
 <header>
     <div class="row">
         <a href="index.html">
@@ -33,7 +34,6 @@
 </nav>
 
 </header>
-
 
 
 <main>
@@ -65,6 +65,7 @@
 
 </table>
 </main>
+</div>
 
 <footer class="row">
 <div>
