--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <main class="row_70 lightblue">
 <div>
-    <p><img class="photo" src="img/logo.png"></p>
+    <p><img class="photo" src="img/photo.png"></p>
     <p class="center_p bold">Скачков А.А.</p>
     <p class="center_p">БИС-19</p>
     <p class="center_p"><a href="https://lms.uni-dubna.ru/">Университет "Дубна" </a></p>
